--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introdução ao HTML</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <nav>
@@ -16,10 +17,10 @@
        </ul>
     </nav>
     <section>
-        <h1>Seja bem vindo ao Mini Projeto</h1>
+        <h1>Seja bem-vindo ao Mini Projeto</h1>
         <p>Este projeto é uma introdução ao HTML, CSS e JavaScript</p>
         <a href="AulaHTML.html">
-        <img src="img/fundo2.jpg" alt="">
+            <img src="img/fundo2.jpg" alt="">
         </a>
     </section>
     <footer>
