mudanças na aula do dia 15

--- a/AulaJS.html
+++ b/AulaJS.html
@@ -13,6 +13,12 @@
         document.write("<p> Dessa forma o <b>Js<b> é incluido através da tag script no body da pgina HTML</p>");    
         document.write("Hello World!!")     
     </script>
+    <h3 id="demo">Este texto por ser azul ou vermelho!</h3>
+    <button onclick="mudarCor('blue')">AZUL</button>
+    <button onclick="mudarCor('red')">VERMELHO</button>
+
+
+
     <script src="JS/script2.js"></script>
 </body>
 
