--- a/index.html
+++ b/index.html
@@ -5,27 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introdução ao HTML</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Cursos de Extensão</title>
+    <link rel="stylesheet" href="CSS externo/styles.css">
 </head>
 <body>
     <nav>
-       <h2>Mini Projeto</h2> 
+        <img src="img/unalogoficial.png" width="", alt="">
        <ul>
-           <li><a href="AulaHTML.html">HTML</a></li>
-           <li><a href="AulaCSS.html">CSS</a></li>
-           <li><a href="AulaJS.html">JavaScript</a></li>
+            <li><a href="dbyteFormOracleBD.html">dbyte - Formação Oracle: Banco de Dados</a></li>
+            <li><a href="DesignEducacao.html">Design e educação: desenvolvimento de produtos educacionais</a></li>
+            
        </ul>
     </nav>
     <section>
-        <h1>Seja bem-vindo ao Mini Projeto</h1>
-        <p>Este projeto é uma introdução ao HTML, CSS e JavaScript</p>
-        <a href="AulaHTML.html">
+        <h1>"Projetos de Extensão 2022"</h1>
+        <p><h3>"Tecnologia da Informação"</h3></p>
+        <a href="https://una.br/bolsas-financiamentos/extensao-universitaria/">
             <img src="img/fundo2.jpg" alt="">
         </a>
+         <p><h4>Que saber mais e como funciona? - Clique na imagem.</h4></p>
     </section>
     <footer>
-        Agregojr &copy; 2022
+        e-mail: amauryjunior.8240@aluno.una.br 
+        <p>Agregojr &copy; 2022</p>
     </footer>
 </body>
 </html>
