--- a/DesignEducacao.html
+++ b/DesignEducacao.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1><b>Design e Educação: Desenvolvimento de Produtos Educacionais.</b></h1>
-    
+    <img id="curso" src="/HTML-CSS/img/fundo4.jpg" alt="">
     <blockquote cite=http://una.br>
     <h2>"Este é um Projeto de Extensão oferecido pela UNA para Cidade Universitária - Aimorés, João Pinheiro e Liberdade."</h2>
 
