--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <img src="img/unalogoficial.png" width="", alt="">
+        <img id="img-una" src="img/unalogoficial.png" width="", alt="">
        <ul>
             <li><a href="dbyteFormOracleBD.html">dbyte - Formação Oracle: Banco de Dados</a></li>
             <li><a href="DesignEducacao.html">Design e educação: desenvolvimento de produtos educacionais</a></li>
