--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        <ul>
             <li><a href="dbyteFormOracleBD.html">dbyte - Formação Oracle: Banco de Dados</a></li>
             <li><a href="DesignEducacao.html">Design e educação: desenvolvimento de produtos educacionais</a></li>
-            
+            <li><a href="Minhapagina.html">Minha página</a></li>
        </ul>
     </nav>
     <section>
