--- a/dbyteFormOracleBD.html
+++ b/dbyteFormOracleBD.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos de Extensão</title>
     <!--Link para o arquivo CSS-->
-    <link rel="stylesheet" href="CSS externo/style.css">
+    <link rel="stylesheet" href="CSS externo/style2.css">
 </head>
 <body>
     <nav><h1><b>dbyte - Formação Oracle: Banco de Dados</b></h1>
