--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos de Extensão</title>
-    <link rel="stylesheet" href="CSS externo/styles.css">
+    <link rel="stylesheet" href="CSS externo/style1.css">
 </head>
 <body>
     <nav>
