correção texto da minha pagina

--- a/Minhapagina.html
+++ b/Minhapagina.html
@@ -62,19 +62,19 @@
     </tr>
     <tr>
         <td>Sejam bem-vindos a está página.
-            Aqui você encontrará informações necessárias para sua inscrição e informação
-            sobre 02 Projetos de Extensão desenvolvidos pela UNA.
+            Aqui você encontrará informações básicas para sua inscrição e informação
+            sobre 02 Projetos de Extensão em tecnologia, desenvolvidos pela UNA.
         </td>
 
         <td>Itálo-brasileiro, graduado em Administração de Empresas - Comex pela UNA.
-            Inicie minha vida profissional como pesquisador de mercado.
-            Depois de 3 anos em Marketing, inicie minha jornada em Desenvolvimento e Gestão de RH, acumulando 28 anos de experiência em empresas nacionais e multinacionais de grande porte,
+            Iniciei minha vida profissional como pesquisador de mercado.
+            Depois de 3 anos em Marketing, iniciei minha jornada em Desenvolvimento e Gestão de RH, acumulando 28 anos de experiência em empresas nacionais e multinacionais de grande porte.
             Durante 12 anos fui docente universitário.Atualmente estou cursando ADS e em transição de carreira.
         </td>
         
         <td>UNA Centro Universitário - Campus Aimorés, está localizado próximo ao circuito cultural da Praça da Liberdade.
-            A Una Aimorés abriga diversos cursos de graduaçãoe e a Casa Una | Ânima Lab, que é um espaço multidisciplinar.
-            Tombada pelo patrimônio histórico, a casa de Afonso Penna hoje é a sede da Casa Una | Ânima Lab.
+            A Una Aimorés abriga diversos cursos de graduação, oferecendo a seus alunos cursos e projetos de extensão.
+            A seda da Casa Una | Ânima Lab, que é um espaço multidisciplinar.Foi tombada pois é a casa onde viveu Afonso Penna.
         </td>
    
         <td> 
