--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav>
         <img id="img-una" src="img/unalogoficial.png" width="", alt="">
        <ul>
-            <li><a href="dbyteFormOracleBD.html">dbyte - Formação Oracle: Banco de Dados</a></li>
-            <li><a href="DesignEducacao.html">Design e educação: desenvolvimento de produtos educacionais</a></li>
-            <li><a href="Minhapagina.html">Minha página</a></li>
+            <li><a href="dbyteFormOracleBD.html"><b>dbyte - Formação Oracle: Banco de Dados</b></a></li>
+            <li><a href="DesignEducacao.html"><b>Design e educação: desenvolvimento de produtos educacionais</b></a></li>
+            <li><a href="Minhapagina.html"><b>Minha página</b></a></li>
        </ul>
     </nav>
     <section>
@@ -26,8 +26,8 @@
          <p><h4>Que saber mais e como funciona? - Clique na imagem.</h4></p>
     </section>
     <footer>
-        e-mail: amauryjunior.8240@aluno.una.br 
-        <p>Agregojr &copy; 2022</p>
+        <b>e-mail: amauryjunior.8240@aluno.una.br</b> 
+        <p><b>Agregojr &copy; 2022</b></p>
     </footer>
 </body>
 </html>
