--- a/Minhapagina.html
+++ b/Minhapagina.html
@@ -33,19 +33,18 @@
             Durante 12 anos fui docente universitário.Atualmente estou cursando ADS e em transição de carreira.
         </td>
         
-        <td>UNA Centro Universitário - Campus Aimorés, está localizado próximo ao circuito cultural da Praça da Liberdade.
-            A Una Aimorés abriga diversos cursos de graduação, oferecendo a seus alunos cursos e projetos de extensão.
-            A seda da Casa Una | Ânima Lab, que é um espaço multidisciplinar.Foi tombada pois é a casa onde viveu Afonso Penna.
-        </td>
+        <td>UNA Centro Universitário - Campus Aimorés, está localizado próximo ao Circuito Cultural da Praça da Liberdade.
+            A Una Aimorés abriga diversos cursos de graduação, oferecendo também aos alunos projetos e cursos de extensão.
+            A residência onde viveu Afonso Pena, foi tombada pelo patrimônio histórico e hoje abriga a sede da Casa Una | Ânima Lab, espaço multidisciplinar de inovação e tecnologia.
    
         <td> 
-            <ol><li>Carlos</li>
+            <ol><li>Carlos Eduardo</li>
                 <li>David</li>
                 <li>Diego</li>
                 <li>Gabriel Getrudes</li>
                 <li>Igor</li>
                 <li>Juan</li>
-                <li>Júlio</li>
+                <li>Júlio Cézar</li>
                 <li>Kevin</li>
                 <li>Marcus Paulo</li>
                 <li>Mateus Cambraia</li>
