--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section>
         <h1>"Projetos de Extensão 2022"</h1>
         <p><h3>"Tecnologia da Informação"</h3></p>
-        <a href="https://una.br/bolsas-financiamentos/extensao-universitaria/">
+        <a href="https://una.br/extensao">
             <img src="img/fundo2.jpg" alt="">
         </a>
          <p><h4>Que saber mais e como funciona? - Clique na imagem.</h4></p>
