--- a/DesignEducacao.html
+++ b/DesignEducacao.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <h1><b>Design e Educação: Desenvolvimento de Produtos Educacionais.</b></h1>
-        <img id="curso" src="/img/fundo4.jpg" alt="">
+        <img id="curso" src="/img/fundo4.jpg" width="", alt="">
         <blockquote cite=http://una.br>
         <h2>"Este é um Projeto de Extensão oferecido pela UNA para Cidade Universitária - Aimorés, João Pinheiro e Liberdade."</h2>
     </nav>
