--- a/dbyteFormOracleBD.html
+++ b/dbyteFormOracleBD.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <h1><b>dbyte - Formação Oracle: Banco de Dados</b></h1>
-        <img id="curso" src="/img/fundo1.png" width="", alt="">
+        <img id="curso" src="/img/fundo1.jpg" alt="">
         <blockquote cite=http://una.br>
         <h2>"Este é um Projeto de Extensão oferecido pela UNA para Cidade Universitária - Aimorés, João Pinheiro e Liberdade."</h2>
     </nav>
